src/objects/npo02__Households_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting object for the Nonprofit Success Pack Households Package</description>
    <fields>
        <fullName>npo02__Advanced_Household_Naming__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, the system will provide automatic naming for Household Names, Informal and Formal Greetings.</description>
        <inlineHelpText>If checked, the system will provide automatic naming for Household Names, Informal and Formal Greetings.</inlineHelpText>
        <label>Automatic Household Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Always_Rollup_to_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, Salesforce will ALWAYS roll up donor data to the Opportunity&apos;s Primary Contact, and corresponding Household Account or record, even if the Opportunity is not from an individual. If left unselected, only the organization will receive credit.</description>
        <inlineHelpText>When selected, Salesforce will ALWAYS roll up donor data to the Opportunity&apos;s Primary Contact, and corresponding Household Account or record, even if the Opportunity is not from an individual. If left unselected, only the organization will receive credit.</inlineHelpText>
        <label>Always Rollup to Primary Contact Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Async_Household_Naming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a non-exposed setting to toggle household naming code to use an asynchronous version instead of the standard version.</description>
        <inlineHelpText>This is a non-exposed setting to toggle household naming code to use an asynchronous version instead of the standard version.</inlineHelpText>
        <label>Async Household Naming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of records processed at a time when calculating donor statistics.  The default size is 200.  Reduce to a smaller number if the Opportunity Rollups are failing due to system limits.</description>
        <inlineHelpText>The number of records processed at a time when calculating donor statistics.  The default size is 200.  Reduce to a smaller number if the Opportunity Rollups are failing due to system limits.</inlineHelpText>
        <label>Rollup Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__DISABLE_HouseholdAfter_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_HHAfter_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__DISABLE_HouseholdBefore_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_HHBefore_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__DISABLE_Household_Opportunity_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_Household_Opp_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__DISABLE_Households_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_Households_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__DISABLE_OpportunityRollup_trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Disable_OppRollup_trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Enable_Opp_Rollup_Triggers__c</fullName>
        <defaultValue>true</defaultValue>
        <description>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</description>
        <inlineHelpText>DEPRECATED. Trigger behavior now controlled in the Trigger Configuration page of NPSP Settings.</inlineHelpText>
        <label>DEPRECATED-Enable_Opp_Rollup_Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Enable_Soft_Credit_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Rolls up Closed/Won Opportunity totals to Contact records based on assigned Opportunity Contact Roles. Soft credit rollups only happen in nightly batches, but you can run them manually from the Rollup Donations Batch settings.</description>
        <inlineHelpText>Rolls up Closed/Won Opportunity totals to Contact records based on assigned Opportunity Contact Roles. Soft credit rollups only happen in nightly batches, but you can run them manually from the Rollup Donations Batch settings.</inlineHelpText>
        <label>Enable Soft Credit Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Enable_Update_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Enable Update Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Excluded_Account_Opp_Rectypes__c</fullName>
        <description>Names of Opportunity Record Types to exclude from statistics when rolling up Account Opportunities.</description>
        <inlineHelpText>Names of Opportunity Record Types to exclude from statistics when rolling up Account Opportunities.</inlineHelpText>
        <label>Opp RecTypes Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Excluded_Account_Opp_Types__c</fullName>
        <description>Opportunities that have this value in the Type picklist won&apos;t be included in rollups to the Account.</description>
        <inlineHelpText>Opportunities that have this value in the Type picklist won&apos;t be included in rollups to the Account.</inlineHelpText>
        <label>Opp Types Excluded for Account Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Excluded_Contact_Opp_Rectypes__c</fullName>
        <description>Opportunities with the selected record types won&apos;t be included in rollups to the Contact. Control or Command click to select more than one record type.</description>
        <inlineHelpText>Opportunities with the selected record types won&apos;t be included in rollups to the Contact. Control or Command click to select more than one record type.</inlineHelpText>
        <label>Opp RecTypes Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Excluded_Contact_Opp_Types__c</fullName>
        <description>Opportunities that have this value in the Type picklist won&apos;t be included in rollups to the Contact.</description>
        <inlineHelpText>Opportunities that have this value in the Type picklist won&apos;t be included in rollups to the Contact.</inlineHelpText>
        <label>Opp Types Excluded for Contact Rollup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Force_Fiscal_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The NPSP automatically checks for the presence of custom fiscal years, and disabled FY settings if they&apos;re found to avoid errors.  This setting overrides that safety-check for users who have accidentally enabled custom fiscal years.</description>
        <inlineHelpText>The NPSP automatically checks for the presence of custom fiscal years, and disabled FY settings if they&apos;re found to avoid errors.  This setting overrides that safety-check for users who have accidentally enabled custom fiscal years.</inlineHelpText>
        <label>Force Fiscal Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Has_Package_Update__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Has Package Update</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Contact_Roles_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically creates Contact Roles for Household members of the Opportunity&apos;s Primary Contact.</description>
        <inlineHelpText>Automatically creates Contact Roles for Household members of the Opportunity&apos;s Primary Contact.</inlineHelpText>
        <label>Household Contact Roles On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Creation_Excluded_Recordtypes__c</fullName>
        <description>Contact Record Types excluded from Household creation.  This setting is ignored if you are using the Household Account model.</description>
        <inlineHelpText>Contact Record Types excluded from Household creation.  This setting is ignored if you are using the Household Account model.</inlineHelpText>
        <label>Household Creation Excluded Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Mailing_List_ID__c</fullName>
        <description>The report ID of the Household Mailing List Report used for Household-deduplicated Campaign mailing lists.  Report should be of Campaigns with Contacts, where Member Status does not contain &apos;Duplicate&apos;</description>
        <inlineHelpText>The report ID of the Household Mailing List Report used for Household-deduplicated Campaign mailing lists.  Report should be of Campaigns with Contacts, where Member Status does not contain &apos;Duplicate&apos;</inlineHelpText>
        <label>Household Mailing List Report</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Member_Contact_Role__c</fullName>
        <description>The Contact Role you want to use for Household Members.</description>
        <inlineHelpText>The Contact Role you want to use for Household Members.</inlineHelpText>
        <label>Household Member Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_OCR_Excluded_Recordtypes__c</fullName>
        <description>The Contact Record Types you want to exclude from automatic Household Member Contact Role creation. Salesforce would then exclude those Contacts from receiving the Household Member Contact Role when the Opportunity is created.</description>
        <inlineHelpText>The Contact Record Types you want to exclude from automatic Household Member Contact Role creation. Salesforce would then exclude those Contacts from receiving the Household Member Contact Role when the Opportunity is created.</inlineHelpText>
        <label>Household OCR Excluded Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Household_Rules__c</fullName>
        <description>Specifies which Contacts will have Households objects automatically created for them.  Note that this is only used for Contacts using the One-to-One or Individual Account Model.  This is ignored for Contacts with the Household Account Model.</description>
        <inlineHelpText>Specifies which Contacts will have Households objects automatically created for them.  Note that this is only used for Contacts using the One-to-One or Individual Account Model.  This is ignored for Contacts with the Household Account Model.</inlineHelpText>
        <label>Household Object Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Last_Update_Check__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Last Update Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npo02__Max_Package_Version__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Max Package Version</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Membership_Grace_Period__c</fullName>
        <defaultValue>30</defaultValue>
        <description>The length of the grace period (in days) after a membership expires (last end date) before the status moves from &apos;Grace Period&apos; to &apos;Expired&apos;.  Defaults to 30 days.</description>
        <inlineHelpText>The length of the grace period (in days) after a membership expires (last end date) before the status moves from &apos;Grace Period&apos; to &apos;Expired&apos;.  Defaults to 30 days.</inlineHelpText>
        <label>Membership Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Membership_Record_Types__c</fullName>
        <defaultValue>&quot;Membership&quot;</defaultValue>
        <description>Names of Opportunity Record Types, such as Membership, that you want to roll up separately from other Opportunity Record Types.</description>
        <inlineHelpText>Names of Opportunity Record Types, such as Membership, that you want to roll up separately from other Opportunity Record Types.</inlineHelpText>
        <label>Membership Record Type Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Opp_Rollup_Scheduled_Job_Id__c</fullName>
        <description>Id for the currently scheduled Opportunity Rollup Job</description>
        <inlineHelpText>Id for the currently scheduled Opportunity Rollup Job</inlineHelpText>
        <label>Opp Rollup Scheduled Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Package_Update_URL__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Package Update URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npo02__Rollup_N_Day_Value__c</fullName>
        <defaultValue>365</defaultValue>
        <description>Provide a value for &apos;N day&apos; rollups, where &apos;N&apos; is the number of days from today into the past.  This value defaults to rollup over the past 365 days.</description>
        <inlineHelpText>Provide a value for &apos;N day&apos; rollups, where &apos;N&apos; is the number of days from today into the past.  This value defaults to rollup over the past 365 days.</inlineHelpText>
        <label>Rollup N Day Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Schedule_Job_Limit__c</fullName>
        <defaultValue>25</defaultValue>
        <description>The number of active scheduled Apex Jobs to look at when scheduling new jobs.</description>
        <inlineHelpText>The number of active scheduled Apex Jobs to look at when scheduling new jobs.</inlineHelpText>
        <label>Schedule Job Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Soft_Credit_Roles__c</fullName>
        <description>Opportunity Contact Roles you want to include in Soft Credit rollups. Control or Command click to select multiple roles.</description>
        <inlineHelpText>Opportunity Contact Roles you want to include in Soft Credit rollups. Control or Command click to select multiple roles.</inlineHelpText>
        <label>Soft Credit Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__Update_Check_Interval__c</fullName>
        <description>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</description>
        <inlineHelpText>DEPRECATED. New versions of the Nonprofit Success Pack will be automatically installed.</inlineHelpText>
        <label>DEPRECATED-Update Check Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__Use_Fiscal_Year_for_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will cause Opportunity rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year.  NOTE: Custom Fiscal Year Settings are NOT supported.</description>
        <inlineHelpText>Checking this box will cause Opportunity rollup totals to respect fiscal year, instead of calendar years settings. To set Fiscal Year information, go to Setup-&gt;Company Profile-&gt;Fiscal Year.  NOTE: Custom Fiscal Year Settings are NOT supported.</inlineHelpText>
        <label>Use Fiscal Year for Rollups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matched_Donor_Role__c</fullName>
        <description>The Contact Role you want to use for matched donors. We recommend using &quot;Matched Donor.&quot;</description>
        <inlineHelpText>The Contact Role you want to use for matched donors. We recommend using &quot;Matched Donor.&quot;</inlineHelpText>
        <label>Matched Donor Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Seasonal_Addresses_Batch_Size__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of records per batch to process when setting seasonal address as the mailing address.</description>
        <inlineHelpText>Number of records per batch to process when setting seasonal address as the mailing address.</inlineHelpText>
        <label>Seasonal Address Batch Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Use_Dated_Conversion_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use Dated Conversion Rates when Advanced Currency Management is enabled in this Organization. If unchecked and ACM is enabled, all NPSP roll-ups will use the default exchange rate for by currency.</inlineHelpText>
        <label>Use Dated Conversion Rates if available</label>
        <type>Checkbox</type>
    </fields>
    <label>Households Settings</label>
</CustomObject>